Fixing install scripts

--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "tests"
   ],
   "dependencies": {
-    "requirejs": "~2.1.16",
+    "requirejs": "~2.1.16"
   },
   "devDependencies": {
     "chai": "~2.1.0",
